--- a/requirements.txt
+++ b/requirements.txt
@@ -1,16 +1,36 @@
+altgraph==0.17.4
+blinker==1.7.0
 certifi==2024.2.2
 charset-normalizer==3.3.2
+click==8.1.7
+colorama==0.4.6
 docutils==0.21.1
+Flask==3.0.3
+Flask-Cors==4.0.0
 idna==3.7
+itsdangerous==2.1.2
+Jinja2==3.1.3
 Kivy==2.3.0
 kivy-deps.angle==0.4.0
 kivy-deps.glew==0.3.1
 kivy-deps.sdl2==0.7.0
+Kivy-examples==2.3.0
 Kivy-Garden==0.1.5
+MarkupSafe==2.1.5
 numpy==1.26.4
+opencv-contrib-python==4.9.0.80
 opencv-python==4.9.0.80
+packaging==24.0
+pefile==2023.2.7
+pillow==10.3.0
+pygame==2.5.2
 Pygments==2.17.2
+pyinstaller==6.6.0
+pyinstaller-hooks-contrib==2024.4
 pypiwin32==223
 pywin32==306
+pywin32-ctypes==0.2.2
 requests==2.31.0
+setuptools==69.5.1
 urllib3==2.2.1
+Werkzeug==3.0.2
